# aonetest

./: README.md  pyproject.toml  requirements.txt
data/: prg1.csv  prg2.csv  prg3.csv
poet_test5/: __concat__.py  cal_rate.py  infer.py  prepro.py
pre_res/: ae_pre.csv  rate_df.csv
ref/: dtw_interpol_df.csv  minmax_scaler.pkl  rfmodel.pkl
