[tool.poetry]
name = "poet_test5"
version = "0.1.0"
description = ""
authors = ["john <john.lee@unomic.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
tensorflow = "^2.8.0"
pandas = "^1.4.2"
keras = "^2.8.0"
sklearn = "^0.0"
dtw-python = "^1.1.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
